--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   --card-lg-radius: 24px;
 }
 
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -47,4 +47,4 @@ a {
 
 .flex-vertical {
   flex-direction: column;
-}
+} */
